Highcharts title reflecting rate

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ function loadChart(maturity, name) {
 			},
 
 			title: {
-				text: 'Euribor ' + name
+				text: 'Rate:' + name
 			},
 
 			series: [{
